src/styles/sass/page/_home.scss
.home-page {
    .menu {
        background-color: transparent;
    }
    .hero-image {
        width: 100%;
    }
    .home-section {
        @extend %set-height2;
        display: flex;
        align-items: center;
        text-align: center;
        .left-part {
            padding-left: 8%;
            .tokens-lower-part {
                width: max-content;
                .cta {
                    margin-top: -20px;
                }
            }
        }
        .home-title {
            font-weight: bold;
            font-size: 48px;
            line-height: 59px;
            font-variant: small-caps;
            text-align: left;
            width: max-content;
            @include mq("tablet", max) {
                font-size: 38px;
                line-height: 46px;
            }
        }
        .token {
            &-left {
                font-weight: 900;
                font-size: 30px;
                line-height: 44px;
                text-align: left;
                font-weight: bold;
                font-variant: small-caps;
                @include mq("tablet", max) {
                    font-size: 28px;
                    line-height: 35px;
                }
            }
            &-value {
                font-weight: bold;
                font-size: 100px;
                line-height: 122px;
                text-align: left;
                font-variant: small-caps;
                @include mq("tablet", max) {
                    font-size: 78px;
                    line-height: 96px;
                }
            }
        }
        .btn-green {
            padding: 8px 52px;
            margin: 50px 0 24px;
            border-radius: unset;
            font-size: 25px;
            @include mq("phone", max) {
                margin: 20px 0 5px;
            }
        }
    }
}

.countdown-wrapper {
    display: flex;
    justify-content: flex-end;
    .time-section {
        text-align: center;
        .time {
            font-weight: bold;
            font-size: 40px;
            line-height: 59px;
            letter-spacing: 0.03em;
            font-variant: small-caps;
            @include mq("tablet", max) {
                font-size: 37.8092px;
                line-height: 46px;
            }
            &-text {
                color: white;
                font-weight: 500;
                font-size: 16px;
                line-height: 19px;
                letter-spacing: -0.02em;
                text-transform: uppercase;
                @include mq("tablet", max) {
                    font-size: 12px;
                    line-height: 15px;
                }
            }
        }
    }
}

.refer-modal {
    max-width: 539px;
    border: unset;
    padding: 30px 40px;
    &__header {
        display: flex;
        justify-content: space-between;
        font-weight: bold;
        font-size: 25px;
        line-height: 30px;
        color: white;
        letter-spacing: -0.025em;
    }
    &__body {
        color: white;
        font-size: 18px;
        &-label {
            font-size: 13px;
            line-height: 16px;
            font-weight: normal;
            text-emphasis-color: white;
        }
        &-invite-btn {
            font-size: 30px;
            line-height: 40px;
            font-variant: small-caps;
            font-weight: bold;
            background-color: $green;
            transition: 500ms;
            &:hover {
                color: $black;
            }
            text-align: center;
            display: inline-block;
            cursor: pointer;
            margin-top: 45px;
            padding: 5px 64px;
            padding-top: 2px;
        }
    }
    &__footer {
        align-items: center;
        button {
            display: block;
        }
        .btn-cancel {
            margin-top: 11px;
            background-color: unset;
            border: unset;
            font-size: 12px;
            line-height: 23px;
            color: white;
        }
        .btn-primary {
            font-weight: bold;
            font-size: 18px;
            line-height: 22px;
            padding: 15px 95px;
        }
    }
    .form {
        padding: 18px 51px;
        @include mq("phone", max) {
            padding-left: 0;
            padding-right: 0;
        }
    }
}

